--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,9 @@ dependencies:
 
   cupertino_icons: ^1.0.0
   get: ^3.23.1
+  google_sign_in: ^4.5.6
+  firebase_core: ^0.5.3
+  firebase_auth: ^0.18.4+1
 
 dev_dependencies:
   flutter_test:
