--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   firebase_core: ^0.5.3
   firebase_auth: ^0.18.4+1
   flutter_facebook_login: ^3.0.0
+  show_up_animation: ^1.0.4
+  cloud_firestore: ^0.14.4
 
 dev_dependencies:
   flutter_test:
