--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,14 @@ dependencies:
   google_sign_in: ^4.5.6
   firebase_core: ^0.5.3
   firebase_auth: ^0.18.4+1
+  flutter_secure_storage: ^3.3.5
   flutter_facebook_login: ^3.0.0
   show_up_animation: ^1.0.4
   cloud_firestore: ^0.14.4
+  rflutter_alert: ^1.1.0
+  modal_progress_hud: ^0.1.3
+
+
 
 dev_dependencies:
   flutter_test:
